--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,2 @@
 <p>hello <%= current_user.email %> </p>
+<%= button_to "logout", {:controller=> "sessions", :action=> "destroy"}, :method => :delete%>
