--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,3 @@
+<h1> OMFG LOOK AT THIS FUCKIN SITE</h1>
+<h2> I WASN'T EVEN SUPPOSED TO MAKE AN INDEX FOR USERS</h2>
 <p>hello <%= current_user.email %> </p>
