--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,5 @@
 <h3> Create a new User! </h3>
 <hr>
 <form action="<%=users_url%>" method="POST">
-	 <%= auth_token %>
-	 <label>Email:</label>
-	 <input type="text" name="user[email]" />
-	 <br>
-	 <label>Password:</label>
-	 <input type="password" name="user[password]" />
-	 <br>
-	 <input type="submit" value="Submit" />
+<%= render 'shared/user_form' %>
 </form>
